--- a/Sjuklöner/Views/Claims/Create.cshtml
+++ b/Sjuklöner/Views/Claims/Create.cshtml
@@ -23,7 +23,7 @@
     <div class="row">
         <p class="col col-md-2"></p>
         <p class="page-header col col-md-10">Ansökan om sjuklöneersättning</p>
-        <nl class="col col-md-offset-2 font-size-12">Vård- och omsorgsförvaltningen i Helsingborgs kommun</nl>
+        @*<nl class="col col-md-offset-2 font-size-12">Vård- och omsorgsförvaltningen i Helsingborgs kommun</nl>*@
         <br>
         @*<p class="col col-md-offset-2 col-md-10 second-page-header">Steg 1: Ange organisationsnummer och sjukperiod</p>*@
     </div>
