--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -5,7 +5,7 @@
 }
 <body>
     <div class="row index-page-margin">
-        <p class="col col-md-2"></p>
+        @*<p class="col col-md-2"></p>*@
         <p class="page-header col col-md-10">Ansökningar, ombud</p>
         @*<nl class="col col-md-offset-2 font-size-12">Vård- och omsorgsförvaltningen i Helsingborgs kommun</nl>*@
     </div>
@@ -13,13 +13,13 @@
     <br />
     <br />
     <div class="row">
-        <div class="col col-md-offset-2">
+        <div class="col">
             @Html.ActionLink("Skapa ny ansökan", "Create", null, new { @class = "btn btn-primary btn-primary-wide" })
         </div>
     </div>
-    <hr class="claim-divider col-md-offset-2" />
+    <hr class="claim-divider" />
     <div class="row">
-        <div class="col col-md-offset-2">
+        <div class="col">
             <div class="second-page-header">
                 Avslagna
             </div>
@@ -83,17 +83,17 @@
             }
             else
             {
-                <div class="padding-left-no-claim font-size-16">
+                <div class="left-margin-23 font-size-16">
                     Du har inga avslagna ansökningar.
                 </div>
                 <br />
             }
         </div>
     </div>
-    <hr class="claim-divider col-md-offset-2" />
+    <hr class="claim-divider" />
 
     <div class="row">
-        <div class="col col-md-offset-2">
+        <div class="col">
             <div class="second-page-header">
                 Utkast
             </div>
@@ -166,17 +166,17 @@
             }
             else
             {
-                <div class="padding-left-no-claim font-size-16">
+                <div class="left-margin-23 font-size-16">
                     Du har inga utkast.
                 </div>
                 <br />
             }
         </div>
     </div>
-    <hr class="claim-divider col-md-offset-2" />
+    <hr class="claim-divider" />
 
     <div class="row">
-        <div class="col col-md-offset-2">
+        <div class="col">
             <div class="second-page-header">
                 Inskickade
             </div>
@@ -243,17 +243,17 @@
             }
             else
             {
-                <div class="padding-left-no-claim font-size-16">
+                <div class="left-margin-23 font-size-16">
                     Du har inga inskickade ansökningar.
                 </div>
                 <br />
             }
         </div>
     </div>
-    <hr class="claim-divider col-md-offset-2" />
+    <hr class="claim-divider" />
 
     <div class="row">
-        <div class="col col-md-offset-2">
+        <div class="col">
             <div class="second-page-header">
                 Godkända
             </div>
@@ -316,13 +316,13 @@
             }
             else
             {
-                <div class="padding-left-no-claim font-size-16">
+                <div class="left-margin-23 font-size-16">
                     Du har inga godkända ansökningar.
                 </div>
                 <br />
             }
         </div>
     </div>
-    <hr class="claim-divider col-md-offset-2" />
+    <hr class="claim-divider" />
 
 </body>
