--- a/Sjuklöner/Views/Claims/Receipt.cshtml
+++ b/Sjuklöner/Views/Claims/Receipt.cshtml
@@ -7,7 +7,7 @@
 <div class="row margin-breadcrumb">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item breadcrumb-font"><a class="breadcrumb-padding" href="../Account/Login">Hem</a></li>
+            <li class="breadcrumb-item breadcrumb-font">@Html.ActionLink("Ansökningar", "Index", null, new { @class = "breadcrumb-padding" })</li>
             <li class="breadcrumb-item breadcrumb-font breadcrumb-padding">Organisationsnummer</li>
             <li class="breadcrumb-item breadcrumb-font breadcrumb-padding">Arbetstid</li>
             <li class="breadcrumb-item breadcrumb-font breadcrumb-padding">Belopp</li>
