--- a/Sjuklöner/Views/Shared/_Layout.cshtml
+++ b/Sjuklöner/Views/Shared/_Layout.cshtml
@@ -100,7 +100,7 @@
         <hr />
         <footer>
             <div class="row">
-                <div class="col col-md-offset-2 col-md-9 small-font padding-left-no-claim">
+                <div class="col col-md-11 small-font padding-left-no-claim">
                     <p>Vård- och omsorgsförvaltningen i Helsingborgs kommun</p>
                 </div>
                 <div class="col col-md-1 small-font">
