--- a/Sjuklöner/Views/Account/Login.cshtml
+++ b/Sjuklöner/Views/Account/Login.cshtml
@@ -43,7 +43,7 @@
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Logga in" class="btn btn-primary btn-primary-small" />
+                    <input type="submit" value="Logga in" class="btn btn-primary btn-primary-small" id="login"/>
                 </div>
             </div>
             <br>
