--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="col">
             <div class="second-page-header">
-                Inkorgen
+                Inkorg
             </div>
             @if (Model.InInboxClaims?.Count() > 0)
             {
