--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -52,9 +52,7 @@
                     {
                         <tr>
                             <td>
-                                <a target="_blank" class="btn btn-primary btn-primary-small" href="@Url.Action("ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber })">
-                                    @Html.DisplayFor(modelItem => item.ReferenceNumber)
-                                </a>
+                                @Html.ActionLink(item.ReferenceNumber, "ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber }, new { @class = "btn btn-primary btn-primary-small" })
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.StatusDate)
@@ -128,9 +126,7 @@
                     {
                         <tr>
                             <td>
-                                <a target="_blank" class="btn btn-primary btn-primary-small" href="@Url.Action("ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber })">
-                                    @Html.DisplayFor(modelItem => item.ReferenceNumber)
-                                </a>
+                                @Html.ActionLink(item.ReferenceNumber, "ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber }, new { @class = "btn btn-primary btn-primary-small" })
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.StatusDate)
@@ -209,9 +205,7 @@
                     {
                         <tr>
                             <td>
-                                <a target="_blank" class="btn btn-primary btn-primary-small" href="@Url.Action("ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber })">
-                                    @Html.DisplayFor(modelItem => item.ReferenceNumber)
-                                </a>
+                                @Html.ActionLink(item.ReferenceNumber, "ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber }, new { @class = "btn btn-primary btn-primary-small" })
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.StatusDate)
