--- a/Sjuklöner/Views/Claims/Decision.cshtml
+++ b/Sjuklöner/Views/Claims/Decision.cshtml
@@ -48,14 +48,14 @@
 
                             <div class="form-group col line-height-10">
                                 @Html.LabelFor(model => model.IvoCheck, htmlAttributes: new { @class = "control-label control-label-large col-md-6" })
-                                <div class="col-md-6 align-bottom3 display-large-font decision-padding-left" id="IVOCheck">
+                                <div class="col-md-6 align-bottom3 control-label-large decision-padding-left" id="IVOCheck">
                                     @Html.DisplayFor(model => Model.IvoCheck)
                                 </div>
                             </div>
 
                             <div class="form-group col line-height-10">
                                 @Html.LabelFor(model => model.AssistanceCheck, htmlAttributes: new { @class = "control-label control-label-large col-md-6" })
-                                <div class="col-md-6 align-bottom3 display-large-font decision-padding-left" id="ProCapitaCheck">
+                                <div class="col-md-6 align-bottom3 control-label-large decision-padding-left" id="ProCapitaCheck">
                                     @Html.DisplayFor(model => Model.AssistanceCheck)
                                 </div>
                             </div>
