Improved receipt page

--- a/Sjuklöner/Views/Claims/Receipt.cshtml
+++ b/Sjuklöner/Views/Claims/Receipt.cshtml
@@ -24,12 +24,12 @@
     
     @*<body class="assistant-claim">*@
     <div class="row">
-        <p class="col col-md-2"></p>
+        @*<p class="col col-md-2"></p>*@
         <p class="page-header-no-padding-left col col-md-10">Tack för din ansökan!</p>
     </div>
 
     <div class="row">
-        <div class="col col-md-offset-2">
+        <div class="col">
             @*<p class="second-page-header-no-padding-left">Tack för din ansökan!</p>*@
             <p>Handläggningstiden är normalt tre arbetsdagar. Vid godkännande sker utbetalning till angivet konto en eller två bankdagar efter beslut.
             <br/>Vid avslag har du möjlighet att överklaga och skicka in en uppdaterad ansökan inom tre veckor efter beslut.</p>
