Added check results

--- a/Sjuklöner/Views/Claims/ClaimDetails.cshtml
+++ b/Sjuklöner/Views/Claims/ClaimDetails.cshtml
@@ -607,6 +607,82 @@
                 </div>
             </div>
 
+            <div class="row">
+                @*<div class="col col-md-2">
+            </div>*@
+                <div class="col col-md-10 form-group-div-frame">
+                    <div class="row form-group-heading">
+                        Bilagor
+                    </div>
+                    <div class="row">
+                        <div class="col col-md-3">
+                            <div class="form-group line-height-12 extra-padding-attachment">
+                                <div class="row label-padding control-label-left-align">
+                                    Lönespecifikation, ordinarie
+                                </div>
+                                <div class="row display-padding2">
+                                    <a target="_blank" href="@Href("~/Content/Attachments/exempel.pdf")">
+                                        lönespecifikation_ordinarie.pdf
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-md-3">
+                            <div class="row label-padding control-label-left-align">
+                                Lönespecifikation, vikarie
+                            </div>
+                            <div class="row display-padding2">
+                                <a target="_blank" href="@Href("~/Content/Attachments/exempel.pdf")">
+                                    lönespecifikation_vikarie.pdf
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col col-md-3">
+                            <div class="row label-padding control-label-left-align">
+                                Sjukfrånvaroanmälan
+                            </div>
+                            <div class="row display-padding2">
+                                <a target="_blank" href="@Href("~/Content/Attachments/exempel.pdf")">
+                                    sjukfrånvaroanmälan.pdf
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col col-md-3">
+                            <div class="row label-padding control-label-left-align">
+                                Läkarintyg
+                            </div>
+                            <div class="row display-padding2">
+                                <a target="_blank" href="@Href("~/Content/Attachments/exempel.pdf")">
+                                    läkarintyg.pdf
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col col-md-3">
+                            <div class="row label-padding control-label-left-align">
+                                Tidsredovisning, Försäkringskassan, ordinarie assistent
+                            </div>
+                            <div class="row display-padding2">
+                                <a target="_blank" href="@Href("~/Content/Attachments/exempel.pdf")">
+                                    tidsredovisning_ordinarie.pdf
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col col-md-3">
+                            <div class="row label-padding control-label-left-align">
+                                Tidsredovisning, Försäkringskassan, vikarierande assistent
+                            </div>
+                            <div class="row display-padding2">
+                                <a target="_blank" href="@Href("~/Content/Attachments/exempel.pdf")">
+                                    tidsredovisning_vikarie.pdf
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             @*<div class="row">
                     <div class="col col-md-2">
                     </div>
