--- a/Sjuklöner/Views/Claims/Create.cshtml
+++ b/Sjuklöner/Views/Claims/Create.cshtml
@@ -27,6 +27,10 @@
         <br>
         @*<p class="col col-md-offset-2 col-md-10 second-page-header">Steg 1: Ange organisationsnummer och sjukperiod</p>*@
     </div>
+    <div class="row">
+        <p class="col col-md-2"></p>
+        <p class="col col-md-10 second-page-header2">Steg 1: Ange organisationsnummer och sjukperiod</p>
+    </div>
 
     <div class="row">
         <div class="form-horizontal">
