--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -174,7 +174,7 @@
     <div class="row">
         <div class="col">
             <div class="second-page-header">
-                Inskickade
+                Under handläggning
             </div>
             @if (Model.UnderReviewClaims?.Count() > 0)
             {
@@ -238,7 +238,7 @@
             else
             {
                 <div class="left-margin-23 font-size-16">
-                    Du har inga inskickade ansökningar.
+                    Du har inga ansökningar under handläggning.
                 </div>
                 <br />
             }
