--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -127,16 +127,22 @@ li a {
     padding-left: 0;
 }
 
+.check-result-img {
+    width: 15px;
+    height: 15px;
+    margin: 0 4px 3px 0;
+}
+
 .helsingborg-logo {
     width: 20%;
     height: 20%;
-    margin: 15px 5px 15px 5px;
+    margin: 15px 5px 0 5px;
 }
 
 .bitoreq-logo {
     width: 20%;
     height: 20%;
-    margin: 25px 5px 5px 5px;
+    margin: 20px 5px 5px 5px;
     float: right;
 }
 
@@ -193,8 +199,8 @@ li a {
 
 .page-header1 {
     font-size: 50px;
-    /*line-height: 34px;*/
-    padding: 0 15px 18px 5px;
+    line-height: 1.0;
+    padding: 0 15px 0 5px;
     margin-top: 151px;
     margin-bottom: 0;
     /*margin-bottom: 40px;*/
@@ -248,12 +254,27 @@ li a {
     border: none;
 }
 
-.second-page-header-large {
-    font-size: 36px;
+.second-page-header2 {
+    font-size: 24px;
     /*line-height: 34px;*/
     padding: 20px 15px 18px 5px;
     margin-top: 5px;
     margin-bottom: 10px;
+    margin-left: 0;
+    /*margin-bottom: 40px;*/
+    /*font-family: "caslonno224ef-blackregular", "Whitney SSm A", "Whitney SSm B", Arial, sans-serif;
+    font-family: 'Chonburi', cursive;
+    color: #202020;*/
+    font-weight: bold;
+    border: none;
+}
+
+.second-page-header-large {
+    font-size: 36px;
+    /*line-height: 34px;*/
+    padding: 0 30px 0 5px;
+    margin-top: 5px;
+    margin-bottom: 0;
     margin-left: 18px;
     /*margin-bottom: 40px;*/
     /*font-family: "caslonno224ef-blackregular", "Whitney SSm A", "Whitney SSm B", Arial, sans-serif;
@@ -766,8 +787,16 @@ special-left-margin {
     padding-left: 25px;
 }
 
+.display-padding2 {
+    padding-left: 15px;
+}
+
 .display-padding-large {
     padding-left: 45px;
+}
+
+.extra-padding-attachment {
+    padding-left: 10px;
 }
 
 .control-label-left-align {
@@ -939,4 +968,16 @@ a:hover, a:focus {
 
 .table-button-cell {
     width: 114px;
+}
+
+.negative-result {
+    /*color: #ffffff;*/
+    color: #d2322d;
+    /*background-color: #d2322d;*/
+}
+
+.positive-result {
+    /*color: #ffffff;*/
+    color: #47a447;
+    /*background-color: #47a447;*/
 }
