--- a/Sjuklöner/Views/Claims/ClaimAmount.cshtml
+++ b/Sjuklöner/Views/Claims/ClaimAmount.cshtml
@@ -28,7 +28,7 @@
         <p class="page-header col col-md-10">Ansökan om sjuklöneersättning</p>
         @*<nl class="col col-md-offset-2 font-size-12">Vård- och omsorgsförvaltningen i Helsingborgs kommun</nl>*@
         <br>
-        <p class="col col-md-offset-2 col-md-10 second-page-header">Steg 3: Ange belopp och skicka in ansökan</p>
+        <p class="col col-md-offset-2 col-md-10 second-page-header2">Steg 3: Ange belopp och skicka in ansökan</p>
     </div>
 
     <div class="row">
