--- a/Sjuklöner/Views/Claims/Hours.cshtml
+++ b/Sjuklöner/Views/Claims/Hours.cshtml
@@ -33,7 +33,7 @@
 
         <div class="row">
             <p class="col col-md-2"></p>
-            <p class="page-header col col-md-10">Ansökan om sjuklöneersättning</p>
+            <p class="page-header3 col col-md-10">Ansökan om sjuklöneersättning</p>
             @*<nl class="col col-md-offset-2 font-size-12">Vård- och omsorgsförvaltningen i Helsingborgs kommun</nl>*@
         </div>
         <div class="row">
